# guild

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  MINIMAL_BLOCKCHAIN_DESIGN.md  README.md  docker-compose.yml  run_minimal_blockchain.sh  test_ping.sh
.claude/: settings.local.json
guild-discovery/: Cargo.toml
guild-discovery/src/: bootstrap.rs  dht.rs  discovery.rs  lib.rs  local_scan.rs
guild-home/: .gitignore  Cargo.toml  Dockerfile  README.md  build.sh
guild-home/src/: blockchain_bridge.rs  config.rs  discovery.rs  guild_home.rs  help.rs  lib.rs  main.rs  network.rs  tui.rs
guild-logger/: Cargo.toml
guild-logger/src/: lib.rs
minimal-blockchain/: Cargo.toml  README.md
minimal-blockchain/src/: consensus.rs  ipc.rs  main.rs  types.rs
