[package]
name = "guild-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
guild-logger = { path = "../guild-logger" }
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
bincode = "1.3"
rand = "0.8"
tracing = "0.1"
async-trait = "0.1"
