[package]
name = "guild-home"
version = "0.1.0"
edition = "2021"
authors = ["Guild Home Contributors"]
description = "P2P peer discovery and networking core"
license = "MIT"

[dependencies]
# P2P 네트워킹용 의존성
guild-discovery = { path = "../guild-discovery" }
guild-logger = { path = "../guild-logger" }
tokio = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
uuid = { workspace = true }
blake3 = "1.8.2"

# TUI 의존성
ratatui = "0.24"
crossterm = "0.27"
chrono = "0.4"

[lib]
name = "guild_home"
path = "src/lib.rs"

[[bin]]
name = "guild-home"
path = "src/main.rs"
